tests/fixtures/syntax/valid/document_file_comment_lines_in_block.repor
document file {
  # A comment line inside a document block is discarded like any other.
  title "Documented source" # trailing inline comment
  order 3
}

case "documented source runs" {
  $ true
  assert {
    exit 0
  }
}
